--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -4,4 +4,5 @@
     <string name="Primera_actividad">Primera Actividad</string>
     <string name="Segunda_actividad">Segunda Actividad</string>
     <string name="buttonchange">Boton</string>
+    <string name="BotonMapa">Abrir Mapa</string>
 </resources>
