--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -4,5 +4,7 @@
     <string name="Primera_actividad">Primera Actividad</string>
     <string name="Segunda_actividad">Segunda Actividad</string>
     <string name="buttonchange">Boton</string>
+    <string name="title_activity_maps">Mapa Actividad</string>
     <string name="BotonMapa">Abrir Mapa</string>
+    <string name="Antenna">Antena</string>
 </resources>
