--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="buttonchange">Boton</string>
     <string name="title_activity_maps">MapsActivity</string>
     <string name="BotonMapa">Open Map</string>
+    <string name="Antenna">Antena</string>
 
 </resources>
