--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -7,4 +7,6 @@
     <string name="title_activity_maps">Mapa Actividad</string>
     <string name="BotonMapa">Abrir Mapa</string>
     <string name="Antenna">Antena</string>
+    <string name="Stage">Nueva Etapa</string>
+    <string name="Toast">Nueva Etapa creada. Estás en la etapa</string>
 </resources>
